update README, add Inter Google Font, and adjust header and card content spacing issues using flex grow

--- a/css/main.css
+++ b/css/main.css
@@ -16,8 +16,7 @@
 
 /* --- GENERAL STYLES --- */
 html {
-  /* will choose font-family later */
-  font-family: sans-serif;
+  font-family: "Inter", sans-serif;
 }
 
 *:visited {
@@ -345,6 +344,13 @@ small {
 
   display: flex;
   flex-direction: column;
+  flex: 2;
+}
+
+.card a {
+  display: inherit;
+  flex-direction: inherit;
+  flex: inherit;
 }
 
 .card:hover,
@@ -380,11 +386,17 @@ small {
 
   text-align: center;
   padding: 1.5rem;
+
+  flex: 2;
 }
 
 .card__content-title {
   color: var(--color-primary);
-  flex-grow: 2;
+  flex: 2;
+}
+
+.card__content-text {
+  flex: 1;
 }
 
 /* --- SPLIT IMAGE CONTENT --- */
@@ -412,7 +424,7 @@ small {
 /* --- CARD GROUP 2 --- */
 #card-group__2 .card a {
   display: inherit;
-  flex-grow: 2;
+  flex: 2;
 }
 
 .card-group__title {
@@ -577,10 +589,11 @@ small {
     
     .header__main {
       padding: 0;
+      flex: 2;
     }
 
     .header__logo {
-      width: 12rem;
+      width: 10rem;
       margin: 0;
     }
     
@@ -591,7 +604,7 @@ small {
     .header__nav {
       /* no matter the reason, keep display block */
       --header-nav-display: block;
-      width: 60%;
+      flex: 3;
     }
   
     .header__list {
@@ -600,7 +613,7 @@ small {
   
     .header__list-item {
       padding: 1.5rem 0.75rem;
-      flex-grow: 1;
+      flex: 1;
     }
 
   /* --- FOOTER --- */
